--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "im-notify",
-  "version": "1.0.0",
+  "name": "msg-notify",
+  "version": "1.0.5",
   "description": "Display notifications to your app",
   "main": "dist/index.js",
+  "files": [
+    "dist/index.js",
+    "app/"
+  ],
   "scripts": {
     "start": "webpack-dev-server --hot",
-    "build": "webpack -p",
+    "build": "webpack",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["notify", "notification", "toast", "react-notify", "pure-notify", "message"],
   "author": "Brook Yang",
   "license": "ISC",
   "devDependencies": {
@@ -17,6 +22,8 @@
     "babel-preset-env": "^1.2.1",
     "css-loader": "^0.27.1",
     "html-webpack-plugin": "^2.28.0",
+    "rollup": "^0.41.5",
+    "rollup-plugin-babel": "^2.7.1",
     "style-loader": "^0.13.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
