--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "msg-notify",
-  "version": "1.0.5",
+  "version": "1.1.1",
   "description": "Display notifications to your app",
   "main": "dist/index.js",
   "browser": "dist/notify-browser.js",
   "files": [
     "dist/notify-browser.js",
+    "dist/notify.css",
     "lib/",
     "README.md"
   ],
   "scripts": {
     "start": "webpack-dev-server --hot",
-    "build": "npm run build-main && npm run build-browser",
-    "build-browser": "rollup --config rollup.config.js  --format iife --name msgNotify --output dist/notify-browser.js",
+    "build": "npm run build-main && npm run build-browser && npm run build-style",
     "build-main": "rollup --config rollup.config.js  --format cjs --output dist/index.js",
+    "build-browser": "rollup --config rollup.config.js  --format iife --name msgNotify --output dist/notify-browser.js",
+    "build-style": "stylus lib/notify.styl -o dist",
     "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
