--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "msg-notify",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "Display notifications to your app",
   "main": "dist/index.js",
-  "browser": "dist/notify-browser.js",
+  "browser": "dist/notify-umd.js",
   "files": [
-    "dist/notify-browser.js",
+    "dist/notify-umd.js",
     "dist/notify.css",
     "lib/",
     "README.md"
@@ -13,9 +13,9 @@
   "scripts": {
     "start": "webpack-dev-server --hot",
     "build-demo": "webpack",
-    "build": "npm run build-main && npm run build-browser && npm run build-style",
+    "build": "npm run build-main && npm run build-umd && npm run build-style",
     "build-main": "rollup --config rollup.config.js  --format cjs --output dist/index.js",
-    "build-browser": "rollup --config rollup.config.js  --format iife --name msgNotify --output dist/notify-browser.js",
+    "build-umd": "rollup --config rollup.config.js  --format umd --name msgNotify --output dist/notify-umd.js",
     "build-style": "stylus lib/notify.styl -o dist",
     "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
